# minutes

./: CMakeLists.txt  compile.sh  delimiter.c  delimiter.h  example_data.txt  flags.c  flags.h  intdata.c  intdata.h  logs.c  logs.h  main.c  minute_data.c  minute_data.h  minutes.c  minutes.h  minutes.txt  minutes_set.c  minutes_set.h  string_test  test  test_intdata.c  test_minutes.c  youtube_films.txt
